@@ -11,10 +11,11 @@ import java.util.stream.Stream;
 import org.antlr.v4.runtime.CharStream;
 import org.antlr.v4.runtime.CharStreams;
 import org.antlr.v4.runtime.CommonTokenStream;
-
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import fr.ufrst.m1info.gl.groupe7.lexerparser.gen.minijaja.MiniJajaLexer;
@@ -39,9 +40,7 @@ import fr.ufrst.m1info.gl.groupe7.lexerparser.minijaja.ast.expressions.exp1.grea
 import fr.ufrst.m1info.gl.groupe7.lexerparser.minijaja.ast.expressions.exp2.plus.PlusNode;
 import fr.ufrst.m1info.gl.groupe7.lexerparser.minijaja.ast.expressions.exp2.unaryMinus.UnaryMinusNode;
 import fr.ufrst.m1info.gl.groupe7.lexerparser.minijaja.ast.main.MainNode;
-
-import static org.junit.jupiter.api.Assertions.*;
-
+import fr.ufrst.m1info.gl.groupe7.memoire.Stacks;
 
 @ExtendWith(MockitoExtension.class)
 class MiniJajaInterpreterVisitorTest {
@@ -52,6 +51,7 @@ class MiniJajaInterpreterVisitorTest {
         MiniJajaParser.ClasseContext tree = parser.classe();
         assertEquals(0, parser.getNumberOfSyntaxErrors(), "pb syntaxe");
 
+//        Stacks stacks = mock(Stacks.class);
         MiniJajaInterpreterVisitor visitor = new MiniJajaInterpreterVisitor();
         AstNode node = visitor.visitClasse(tree);
         assertNotNull(node, "Visitor returned null AST");
@@ -73,11 +73,10 @@ class MiniJajaInterpreterVisitorTest {
     }
 
     @Test
-    @Disabled
-    void simpleProgramResource_buildsExpectedAst() throws IOException {
+    void simpleProgramResource_buildsExpectedAst() throws IOException, URISyntaxException {
         URL url = getClass().getClassLoader().getResource("simple_program.mjj");
         assertNotNull(url, "Resource simple_program.mjj not found");
-        String source = Files.readString(Path.of(url.getPath()));
+        String source = Files.readString(Paths.get(url.toURI()));
 
         ClasseNode ast = parseFromString(source);
         String expected = "Classe(Ident(C),decls (var (int , Ident(x) , nbre(0)),vnil),Main(vnil, Inil))";
@@ -99,7 +98,7 @@ class MiniJajaInterpreterVisitorTest {
                     int errors = parser.getNumberOfSyntaxErrors();
                     boolean missingClassIdent = tree.IDENT() == null;
                     if (errors == 0 && !missingClassIdent) {
-                     
+//                        Stacks stacks = mock(Stacks.class);
                         MiniJajaInterpreterVisitor visitor = new MiniJajaInterpreterVisitor();
                         AstNode ast = visitor.visitClasse(tree);
                         assertNotNull(ast, () -> "Visitor returned null AST for syntactically valid invalid-case: "
